--- a/example/brazil_demo_2/demo.css
+++ b/example/brazil_demo_2/demo.css
@@ -7,7 +7,7 @@
 #remoteVideo.playing
 {
   background-color:    transparent;
-  background-image:    url('img/spinner.gif');
+  background-image:    url('http://www.guiaanda.cl/deco_img/spinnerLarge.gif');
   background-position: center;
   background-repeat:   no-repeat;
 }
